Fix: Ajustes de warnings e mensanges