@@ -8,8 +8,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 @Service
 public class ListarPostService {
 
@@ -19,6 +17,6 @@ public class ListarPostService {
     public List<PostResponse> listar() {
         return postRepository.findAll().stream()
                 .map(PostMapper::toResponse)
-                .collect(toList());
+                .toList();
     }
 }
